@@ -1,3 +1,7 @@
+2016-04-05  Ben Elliston  <bje@gnu.org>
+
+	* runtest.exp: Remove defunct and undocumented --tool_root option.
+
 2016-04-04  Ben Elliston  <bje@gnu.org>
 
 	* doc/dejagnu.texi: More overhauling.
